# DCLVideoPlayer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
ffmpeg-static/: README.md  build.sh
ffmpeg-static/.github/workflows/: build.yml
src/: decoder.c  decoder.h  framequeue.c  framequeue.h  library.c  library.h  logger.h  main.c  player.c  player.h  queue.c  queue.h  safeframequeue.c  safeframequeue.h  test.c  testutil.h  threadqueue.c  threadqueue.h  utils.c  utils.h  viewer.c
